# Photon

./: .gitignore  CMakeLists.txt  Camera.h  Color.cpp  Color.h  Factory.cpp  Factory.h  HitRecord.h  README.md  RandomGenerator.cpp  RandomGenerator.h  Ray.h  RayTracer.h  defines.h  main.cpp
dependencies/SDL2-2.0.20/: sdl2Config.cmake
dependencies/rapidjson/: VERSION.txt
google_test/: CMakeLists.txt  ColorTest.cpp
include/: Camera.h  Factory.h  HitRecord.h  Lights.h  Materials.h  Perlin.h  RandomGenerator.h  Ray.h  RayPayload.h  RayTracer.h  Textures.h
include/image/: bitmap.hpp  image_file_handler.hpp
include/material/: material.hpp
include/materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
include/object/: aabb.hpp  bvh.hpp  geometry.hpp  geometry_builder.hpp  light.hpp  light_sampler.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  object_instance.hpp  texture.hpp  triangle.hpp  vertex.hpp
include/objects/: Aabb.h  Bvh.h  Hitable.h  HitableList.h  Segment.h  Sphere.h  Triangle.h
include/renderer/: bucket_rendering.hpp  camera.hpp  color.hpp  hit_info.hpp  output.hpp  ray.hpp  renderer.hpp  rendering_algorithms.hpp  thread_signals.hpp  window.hpp
include/scene/: geometry.hpp  geometry_builder.hpp  scene.hpp  scene_builder.hpp  scene_factory.hpp  scene_file_handler.hpp
include/sdl_window/: Color.h  Renderer.h
include/util/: discrete_distribution.hpp  interpolatable_data.hpp  log.hpp  mat.hpp  named_bitfield.hpp  quat.hpp  random_generator.hpp  spatial_configuration.hpp  spectral.hpp  timer.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.h  Metal.cpp  Metal.h
objects/: Hitable.h  HitableList.cpp  HitableList.h  Segment.cpp  Segment.h  Sphere.cpp  Sphere.h
render/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.h
sdl_window/: Color.cpp  Color.h  Renderer.cpp  Renderer.h
shaders/: basic.frag  basic.vert
src/: Factory.cpp  Materials.cpp  Perlin.cpp  RandomGenerator.cpp  RayTracer.cpp  main.cpp
src/image/: bitmap.cpp  image_file_handler.cpp
src/material/: dielectric.cpp  diffuse.cpp  material.cpp  metal.cpp  texture.cpp
src/materials/: Dielectric.cpp  Lambertian.cpp  Metal.cpp
src/object/: aabb.cpp  bvh.cpp  geometry.cpp  geometry_builder.cpp  light.cpp  light_sampler.cpp  material.cpp  model.cpp  object.cpp  object_instance.cpp  texture.cpp  triangle.cpp
src/objects/: Aabb.cpp  Bvh.cpp  HitableList.cpp  Segment.cpp  Sphere.cpp  Triangle.cpp
src/renderer/: bucket_rendering.cpp  camera.cpp  color.cpp  output.cpp  path_tracer.cpp  ray.cpp  renderer.cpp  whitted_ray_tracer.cpp  window.cpp
src/scene/: geometry.cpp  geometry_builder.cpp  scene.cpp  scene_builder.cpp  scene_factory.cpp  scene_file_handler.cpp
src/sdl_window/: Color.cpp  Renderer.cpp
src/util/: random_generator.cpp  spatial_configuration.cpp  spectral.cpp
